# data

./: .gitignore  CITATION.cff  PROJECT_WORKFLOW.md  README.md  RIGHTS.md  environment.yml  pyproject.toml
config/: smoke.yaml  study.yaml
mechanism_metadata/: acquisition_log.csv  candidate_matrix.csv  family_groups.csv  registry.csv  thermo_limits.csv
metadata/: deposit_manifest.csv  repository_file_manifest.csv  repository_inventory.csv
scripts/: analyze_full_proxy_pareto.py  analyze_jsr_ensemble.py  analyze_lbv_ensemble.py  analyze_lbv_family_ablation.py  analyze_lbv_revision_statistics.py  analyze_pareto_quantile_sensitivity.py  analyze_reactor_robustness.py  analyze_revision_robustness.py  assemble_manuscript.py  audit_experimental_domain_support.py  audit_figure_deliverables.py  audit_manuscript_citations.py  audit_manuscript_numbers.py  audit_mechanisms.py  audit_respecth.py  audit_screening_alignment.py  audit_supplementary_references.py  build_campaign_registry.py  build_energy_sensitivity.py  build_idt_operating_design.py  build_jsr_validation_design.py  build_manuscript_references.py  build_operating_design.py  build_pareto_confirmation_design.py  build_proxy_screening_design.py  build_reactor_design.py  build_repository_manifest.py  build_submission_docx.py  compare_lbv_solver_paths.py  evaluate_lbv_surrogate.py  extract_respecth_bibliography.py  make_figure1_workflow.py  make_figure2_data_coverage.py  make_figure3_mechanism_errors.py  make_figure4_ensemble_validation.py  make_figure5_reactivity_maps.py  make_figure6_emissions_pareto.py  (+36 more)
(+1757 files in other folders)
