[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "pca-ensemble"
version = "0.1.0"
description = "Cross-validated multi-mechanism ensembles for partially cracked ammonia combustion"
requires-python = ">=3.12"
dependencies = [
  "cantera>=3.2,<3.3",
  "numpy>=2.5",
  "pandas>=3.0",
  "scipy>=1.18",
  "scikit-learn>=1.9",
  "matplotlib>=3.11",
  "seaborn>=0.13",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

